# ore-hgx-server

./: Cargo.toml  README.md
key/: 01.json
src/: args.rs  dynamic_fee.rs  log.rs  main.rs  mine.rs  ore_utils.rs  send_and_confirm.rs  utils.rs
