[package]
name = "ore-hgx-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
drillx = "2.0.0"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
ore-api = "2.1.0"
ore-utils = "2.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-sdk = "1.18.12"
solana-client = "1.18.12"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
dotenv = "0.15.0"
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }
rand = "0.8.5"
base64 = "0.22.1"
walkdir = "2.3"
warp = "0.3"
bincode = "1.3.3"